# gterm

./: .gitignore  Makefile  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
gterm/: __init__.py  __main__.py  _version.py  cli.py  config.py  context_state.py  executor.py  git_info.py  hardware.py  history.py  llm.py  model_manager.py  platform_shell.py  project_context.py  prompt.py  repl.py  shell_history.py  ui.py
tests/: test_config.py  test_direct_command_detection.py  test_execution_policy.py  test_executor_preview.py  test_project_context.py  test_prompt.py
